fix: Añadido flex-wrap a botones
Se ha añadido flex-wrap: wrap al contenedor de los botones por si fuesen a ser demasiado grandes que colapsen en otras líneas

--- a/CSS/Sheet 04/styles.css
+++ b/CSS/Sheet 04/styles.css
@@ -137,6 +137,7 @@ main {
 .section-container-tipos {
     padding-top: 3px;
     display: flex;
+    flex-wrap: wrap;
     gap: 4px;
 }
 
